--- a/Regul_optim.ipynb
+++ b/Regul_optim.ipynb
@@ -1547,9 +1547,8 @@
         "\n",
         "**Hyperparameter tuning** is the process of finding the best set of hyperparameters. Grid search, random search, Bayesian optimization help us to explore different hyperparameter combinations. It is recommended to start with common default values, and gradually adjust one or more hyperparameters during experiments. You can use cross-validation to evaluate model performance for each hypermeter combination.\n",
         "\n",
-        "Learning rate and optimizer affect the convergence of training. Batch size and number of epochs affect the training time and model accuracy. Regularization  (dropout, weight decay) parameters should aid with preventing overfitting.\n",
-        "\n",
-        "**Exercise:** Tune hyperparameters for the model and note down the results. Which hyperparameter set achieved the best accuracy on test data?"
+        "Learning rate and optimizer affect the convergence of training. Batch size and number of epochs affect the training time and model accuracy. Regularization  (dropout, weight decay) parameters should aid with preventing overfitting.\n"
+  
       ],
       "metadata": {
         "id": "k3Ez6sio1DRR"
