--- a/Regul_optim.ipynb
+++ b/Regul_optim.ipynb
@@ -226,7 +226,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Try to understand why the line which calculates regularization function's output has two `sum` functions: `l2 = sum(p.pow(2).sum() for p in model.parameters())/2`. We have plotting logic in the function above for demonstration purposes, and we will give different $λ$ values to customize our regularizer $R$ ($λ$=0 implies no regularization)."
+        "We need to understand why the line which calculates regularization function's output has two `sum` functions: `l2 = sum(p.pow(2).sum() for p in model.parameters())/2`. We have plotting logic in the function above for demonstration purposes, and we will give different $λ$ values to customize our regularizer $R$ ($λ$=0 implies no regularization)."
       ],
       "metadata": {
         "id": "vhxWrAjyLZRz"
